<resources>
    <string name="app_name">Trivago</string>
    <string name="sw_placeholder">SW</string>

    <!--    Search -->
    <string name="search_hint">Search characters</string>

    <!--    Menu-->
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>

    <!--    Theme-->
    <string name="def">Default</string>
    <string name="title_theme_preference">Theme</string>

    <!--    Labels-->
    <string name="label_character_height">Height</string>
    <string name="label_character_birth_year">Birth Year</string>
    <string name="label_character_details">Character Details</string>

    <string name="label_character_species_name">Species Name</string>
    <string name="label_character_species_language">Species Language</string>

    <string name="label_character_planet_name">Planet Name</string>
    <string name="label_character_planet_language">Planet Population</string>

    <string name="label_character_film">The Empire Strikes Back</string>
    <string name="large_text">
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n\n"

        "Bold, graphic, intentional."

    </string>

    <!--    Templating-->
    <string name="template_height_cm">%s cm</string>
    <string name="template_height_inches">%s inches</string>

    <!--    Search Layout-->
    <string name="layout_search_no_info">No star wars character. \n\nSearch for Star Wars Characters here</string>
    <string name="layout_search_previous_label">Your previous searches...</string>

    <!--    Species Layout-->
    <string name="layout_species_no_info">No species information available</string>

</resources>