<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="characterDetailsViewModel"
            type="com.trivago.ui.viewmodel.CharacterDetailsViewModel" />
    </data>

    <merge>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_medium">

                <LinearLayout
                    android:id="@+id/headerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/cardTitles"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginTop="4dp"
                        android:layout_weight=".5"
                        android:text="@string/label_character_species_name"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/cardTitles"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_small"
                        android:layout_marginTop="4dp"
                        android:layout_weight=".5"
                        android:text="@string/label_character_species_language"
                        android:textAlignment="textEnd"
                        android:textColor="@color/black" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewSpecies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginEnd="@dimen/margin_small"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_species" />

                <LinearLayout
                    android:id="@+id/emptyView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_small"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/iv_empty_icon"
                        android:layout_width="80dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_empty_results" />

                    <TextView
                        style="@style/cardTitles"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_normal"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_horizontal"
                        android:text="@string/layout_species_no_info" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </merge>

</layout>